Add polaris catalog migrator tests (#32)
Added Integration tests with Polaris docker image to migrate tables from Nessie, Hadoop, Hive to polaris.